--- a/index.html
+++ b/index.html
@@ -1,156 +1,244 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <div class="main-header-logo">
-        <img src="http://placehold.it/150x100"  alt="Логотип магазина">
-      </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li class="site-navigation"><a href="catalog.html">Каталог</a>
-            <ul class="site-navigation-list">
-              <li class="site-navigation-list-top"><a href="#">Новинки</a></li>
-              <li class="site-navigation-list-item"><a href="catalog.html">Сливочное</a></li>
-              <li class="site-navigation-list-item"><a href="#">Щербеты</a></li>
-              <li class="site-navigation-list-item"><a href="#">Фруктовый лед</a></li>
-              <li class="site-navigation-list-item"><a href="#">Мелорин</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li> <a class="header-btn-search" href="#"><span class="visually-hidden">Поиск</span></a>
-          <!-- Здесь будет форма -->
-          </li>
-          <li><a class="login-link" href="#">Вход</a>
-          <!-- Здесь будет форма -->
-          </li>
-          <li><a class="header-btn-basket" href="#"><span class="visually-hidden">Корзина</span><span class="btn-basket-text">Пусто</span></a></li>
-        </ul>
-        <div class="page-header-info">
-          <p class="opening-hours">С 10 до 20, ежедневно</p>
-          <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
-        </div>
-      </nav>
-    </header>
-    <main class="container">
-      <h1 class="visually-hidden">Магазин "Глейси"</h1>
-      <section class="bonus">
-        <h2 class="visually-hidden">Акции магазина</h2>
-        <ul class="bonus-list">
-          <li class="bonus-item">
-            <h3>Малинка даром!</h3>
-            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="button" href="catalog.html">Хочу варенье!</a>
-          </li>
-          <li class="bonus-item">
-            <h3>Шоколадки даром!</h3>
-            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a class="button" href="catalog.html">Хочу шоколадки!</a>
-          </li>
-        </ul>
-      </section>
-      <section class="popular-offers">
-        <h2 class="visually-hidden">Хиты продаж</h2>
-          <ul>
-            <li class="offers-item">
-              <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-              <img src="http://placehold.it/50x50" alt="Хит!">
-              <span class="item-price">310</span><span class="item-weight">/кг</span>
-              <h3 class="offers-title"><a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Глейси</title>
+</head>
+
+<body>
+  <header class="main-header">
+    <div class="main-header-logo">
+      <img src="http://placehold.it/150x100" alt="Логотип магазина">
+    </div>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li class="site-navigation">
+          <a href="catalog.html">Каталог</a>
+          <ul class="site-navigation-list">
+            <li class="site-navigation-list-top">
+              <a href="#">Новинки</a>
             </li>
-            <li class="offers-item">
-              <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
-              <img src="http://placehold.it/50x50" alt="Хит!">
-              <span class="item-price">380</span><span class="item-weight">/кг</span>
-              <h3 class="offers-title"><a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a></h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            <li class="site-navigation-list-item">
+              <a href="catalog.html">Сливочное</a>
             </li>
-            <li class="offers-item">
-              <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              <img src="http://placehold.it/50x50" alt="Хит!">
-              <span class="item-price">355</span><span class="item-weight">/кг</span>
-              <h3 class="offers-title"><a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            <li class="site-navigation-list-item">
+              <a href="#">Щербеты</a>
             </li>
-            <li class="offers-item">
-              <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
-              <img src="http://placehold.it/50x50" alt="Хит!">
-              <span class="item-price">415</span><span class="item-weight">/кг</span>
-              <h3 class="offers-title"><a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a></h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+            <li class="site-navigation-list-item">
+              <a href="#">Фруктовый лед</a>
+            </li>
+            <li class="site-navigation-list-item">
+              <a href="#">Мелорин</a>
             </li>
           </ul>
-      </section>
-      <section class="features">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <p>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</p>
-        <ul class="features-list">
-          <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-          <li class="features-partners">Закупка ингредиентов   производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-          <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-          <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-        </ul>
-      </section>
-      <div class="blog-news-wrapper">
-        <article class="new-article">
-          <h2>Новое в нашем блоге</h2>
-          <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
-        </article>
-        <section class="subscription-form">
-          <h2 class="visually-hidden">Подписка</h2>
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-          <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
-           <label for="emeil">Электронная почта</label>
-           <input type="text" name="emeil" id="emeil" placeholder="Электронная почта">
-           <input type="submit" value="Отправить">
-          </form>
-        </section>
-      </div>
-      <section class="map">
-        <h2 class="visually-hidden">Как нас найти</h2>
-        <section class="address">
-          <h3 class="visually-hidden">Адрес офиса</h3>
-          <p>
-            Адрес главного офиса<br>
-            и офлайн магазина:<br>
-            ул.Большая Конюшенная<br>
-            19/8, Санкт-Петербург<br>
-          </p>
-          <p>
-            Для заказов по телефону:<br>
-            8 812 450-24-25<br>
-            (с 10 до 20 ежедневно)
-          </p>
-          <a class="button-feedback" href="index.html">Форма обратной связи</a>
-        </section>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-        </ul>
-      </div>
-        <p><a class="link-information" href="#">Для поставщиков</a></p>
-        <p><a class="link-information" href="#">О производстве</a></p>
-        <p><a class="link-information" href="#">Наши документы</a></p>
-        <p><a class="link-information" href="#">Экологические стандарты</a></p>
-        <p class="footer-copyright">
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="http://placehold.it/150x100"  alt="Логотип HTML Academy">
+        </li>
+        <li>
+          <a href="#">Доставка и оплата</a>
+        </li>
+        <li>
+          <a href="#">О Компании</a>
+        </li>
+      </ul>
+      <ul class="user-navigation">
+        <li>
+          <a class="header-btn-search" href="#">
+            <span class="visually-hidden">Поиск</span>
           </a>
-          Сделано в HTML Academy ©2017
+        </li>
+        <li>
+          <a class="login-link" href="#">Вход</a>
+        </li>
+        <li>
+          <a class="header-btn-basket" href="#">
+            <span class="visually-hidden">Корзина</span>
+            <span class="btn-basket-text">Пусто</span>
+          </a>
+        </li>
+      </ul>
+      <div class="page-header-info">
+        <p class="opening-hours">С 10 до 20, ежедневно</p>
+        <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+      </div>
+    </nav>
+  </header>
+  <!-- <section class="slider">Тут будет слайдер</section> -->
+  <main class="container">
+    <h1 class="visually-hidden">Магазин "Глейси"</h1>
+    <section class="deals">
+      <h2 class="visually-hidden">Акции магазина</h2>
+      <div class="deals-item-1">
+        <h3>Малинка даром!</h3>
+        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a class="button" href="catalog.html">Хочу варенье!</a>
+      </div>
+      <div class="deals-item-2">
+        <h3>Шоколадки даром!</h3>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a class="button" href="catalog.html">Хочу шоколадки!</a>
+      </div>
+    </section>
+    <section class="popular-offers">
+      <h2 class="visually-hidden">Хиты продаж</h2>
+      <ul>
+        <li class="offers-item">
+          <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <span class="item-price">310</span>
+          <span class="item-weight">/кг</span>
+          <h3 class="offers-title">
+            <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </h3>
+          <a class="offers-btn" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="offers-item">
+          <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
+          <span class="item-price">380</span>
+          <span class="item-weight">/кг</span>
+          <h3 class="offers-title">
+            <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
+          </h3>
+          <a class="offers-btn" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="offers-item">
+          <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <span class="item-price">355</span>
+          <span class="item-weight">/кг</span>
+          <h3 class="offers-title">
+            <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </h3>
+          <a class="offers-btn" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="offers-item">
+          <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
+          <span class="item-price">415</span>
+          <span class="item-weight">/кг</span>
+          <h3 class="offers-title">
+            <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
+          </h3>
+          <a class="offers-btn" href="#">Быстрый просмотр</a>
+        </li>
+      </ul>
+    </section>
+    <section class="features">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <h3>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
+      <ul class="features-list">
+        <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
+          временем технологий.</li>
+        <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+          долговременное сотрудничество.</li>
+        <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
+          и добавки произведены из натурального, экологически чистого сырья.</li>
+        <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять
+          в пути и позволяет сохранить превосходный вкус.</li>
+      </ul>
+    </section>
+    <div class="blog-news-wrapper">
+      <section class="news">
+        <h2>Новое в нашем блоге</h2>
+        <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
+      </section>
+      <section class="subscription-form">
+        <h2 class="visually-hidden">Подписка</h2>
+        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
+          не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
+          <label for="emeil">Электронная почта</label>
+          <input type="text" name="emeil" id="emeil" placeholder="Электронная почта">
+          <input type="submit" value="Отправить">
+        </form>
+      </section>
+    </div>
+    <section class="map">
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <!-- тут будет карта -->
+      <section class="address">
+        <h3 class="visually-hidden">Адрес офиса</h3>
+        <p>
+          Адрес главного офиса<br>
+          и офлайн магазина:<br>
+          ул.Большая Конюшенная<br>
+          19/8, Санкт-Петербург<br>
         </p>
-    </footer>
-  </body>
+        <p>
+          Для заказов по телефону: <br>
+          8 812 450-24-25<br>
+          (с 10 до 20 ежедневно)
+        </p>
+        <a class="button-feedback" href="index.html">Форма обратной связи</a>
+      </section>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a class="social-button" href="#">Твиттер</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Инстаграм</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Вконтакте</a>
+        </li>
+      </ul>
+    </div>
+    <ul class="footer-links-list">
+      <li class="footer-links-left">
+        <ul class="footer-left-info">
+          <li>
+            <a class="footer-link-information" href="#">Для поставщиков</a>
+          </li>
+          <li>
+            <a class="footer-link-information" href="#">О производстве</a>
+          </li>
+        </ul>
+      </li>
+      <li class="footer-links-right">
+        <ul class="footer-right-info">
+          <li>
+            <a class="footer-link-information" href="#">Наши документы</a>
+          </li>
+          <li>
+            <a class="footer-link-information" href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <p class="footer-copyright">
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="http://placehold.it/150x100" alt="Логотип HTML Academy">
+      </a>
+      Сделано в HTML Academy ©2017
+    </p>
+  </footer>
+
+  <div class="modal modal-feedback">
+    <h2>Мы обязательно вам ответим!</h2>
+    <!-- Форма -->
+    <button class="button">Отправить</button>
+    <button class="modal-close">X</button>
+  </div>
+  <div class="modal modal-search">
+    <h2 class="visually-hidden">Поиск</h2>
+    <!-- Форма -->
+  </div>
+  <div class="modal modal-login">
+    <h2 class="visually-hidden">Вход</h2>
+    <!-- Форма -->
+    <button class="button-enter">Войти</button>
+    <ul class="modal-login-links">
+      <li class="modal-login-link">
+        <a href="#">Забыли пароль?</a>
+      </li>
+      <li class="modal-login-link">
+        <a href="#">Новая регистрация</a>
+      </li>
+    </ul>
+  </div>
+</body>
+
 </html>
